[package]
name = "fyrebird"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
ash = "0.38.0"
cgmath = "0.18.0"
log = "0.4.27"
num-traits = "0.2.18"
png = "0.17.16"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
specs = "0.20.0"
specs-derive = "0.4.1"
thiserror = "2.0.12"
winit = "0.30.9"
